Fixed word wrap.

--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ main {
     outline: none;
 }
 
+div {
+    white-space: normal;
+}
+
 .center {
     margin: auto;
     width: 100%;
